// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render as an anchor with href prop 1`] = `
<DocumentFragment>
  .cache-20nlsu-link-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-20nlsu-link-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-20nlsu-link-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-20nlsu-link-StyledFilledButton:hover,
.cache-20nlsu-link-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<a
    class="cache-20nlsu-link-StyledFilledButton e112qvla3"
    href="http://scaleway.com"
    type="button"
  >
    Scaleway
  </a>
</DocumentFragment>
`;

exports[`Button render large 1`] = `
<DocumentFragment>
  .cache-1qyyuqz-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-1qyyuqz-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1qyyuqz-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-1qyyuqz-StyledFilledButton:hover,
.cache-1qyyuqz-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-1qyyuqz-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render medium 1`] = `
<DocumentFragment>
  .cache-1bu2nfn-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-1bu2nfn-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1bu2nfn-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-1bu2nfn-StyledFilledButton:hover,
.cache-1bu2nfn-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-1bu2nfn-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render small 1`] = `
<DocumentFragment>
  .cache-q9isjo-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-q9isjo-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-q9isjo-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-q9isjo-StyledFilledButton:hover,
.cache-q9isjo-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-q9isjo-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with a tooltip 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1qyyuqz-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-1qyyuqz-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1qyyuqz-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-1qyyuqz-StyledFilledButton:hover,
.cache-1qyyuqz-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<div
    aria-describedby=":r1f:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      class="cache-1qyyuqz-StyledFilledButton e112qvla2"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button render with fullWidth 1`] = `
<DocumentFragment>
  .cache-173v6l3-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-173v6l3-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-173v6l3-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-173v6l3-StyledFilledButton:hover,
.cache-173v6l3-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-173v6l3-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with icon 1`] = `
<DocumentFragment>
  .cache-bqevj0-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-bqevj0-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-bqevj0-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with icon on the right 1`] = `
<DocumentFragment>
  .cache-1kenqpq-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-1kenqpq-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1kenqpq-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with icon only 1`] = `
<DocumentFragment>
  .cache-c654l3-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-c654l3-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-c654l3-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button render with isLoading with icon 1`] = `
<DocumentFragment>
  .cache-bqevj0-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-bqevj0-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-bqevj0-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-cmn72i-StyledSvg e1y1n78x1"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with isLoading without icon 1`] = `
<DocumentFragment>
  .cache-bqevj0-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-bqevj0-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-bqevj0-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-cmn72i-StyledSvg e1y1n78x1"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render xsmall 1`] = `
<DocumentFragment>
  .cache-1gk2x3u-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-1gk2x3u-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1gk2x3u-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-1gk2x3u-StyledFilledButton:hover,
.cache-1gk2x3u-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-1gk2x3u-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&danger 1`] = `
<DocumentFragment>
  .cache-878yc9-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #dd3252;
  border: none;
  color: #ffffff;
  background: #fbbac6;
  color: #fff5f7;
}

.cache-878yc9-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-878yc9-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&danger disabled 1`] = `
<DocumentFragment>
  .cache-878yc9-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #dd3252;
  border: none;
  color: #ffffff;
  background: #fbbac6;
  color: #fff5f7;
}

.cache-878yc9-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-878yc9-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&info 1`] = `
<DocumentFragment>
  .cache-1ghh8ng-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #3f6ed8;
  border: none;
  color: #ffffff;
  background: #a8bff1;
  color: #f4f7ff;
}

.cache-1ghh8ng-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1ghh8ng-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&info disabled 1`] = `
<DocumentFragment>
  .cache-1ghh8ng-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #3f6ed8;
  border: none;
  color: #ffffff;
  background: #a8bff1;
  color: #f4f7ff;
}

.cache-1ghh8ng-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1ghh8ng-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&neutral 1`] = `
<DocumentFragment>
  .cache-1lrb4em-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #f6f6f8;
  border: none;
  color: #4a4f62;
  background: #f6f6f8;
  color: #c4c9d6;
}

.cache-1lrb4em-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1lrb4em-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&neutral disabled 1`] = `
<DocumentFragment>
  .cache-1lrb4em-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #f6f6f8;
  border: none;
  color: #4a4f62;
  background: #f6f6f8;
  color: #c4c9d6;
}

.cache-1lrb4em-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1lrb4em-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&primary 1`] = `
<DocumentFragment>
  .cache-bqevj0-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-bqevj0-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-bqevj0-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&primary disabled 1`] = `
<DocumentFragment>
  .cache-bqevj0-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-bqevj0-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-bqevj0-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&success 1`] = `
<DocumentFragment>
  .cache-11tr3tv-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #22c8a2;
  border: none;
  color: #ffffff;
  background: #9fefdd;
  color: #f5fff6;
}

.cache-11tr3tv-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-11tr3tv-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&success disabled 1`] = `
<DocumentFragment>
  .cache-11tr3tv-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #22c8a2;
  border: none;
  color: #ffffff;
  background: #9fefdd;
  color: #f5fff6;
}

.cache-11tr3tv-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-11tr3tv-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&warning 1`] = `
<DocumentFragment>
  .cache-16nzh7m-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #ff8c69;
  border: none;
  color: #ffffff;
  background: #ffd7c1;
  color: #fffcfa;
}

.cache-16nzh7m-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-16nzh7m-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&warning disabled 1`] = `
<DocumentFragment>
  .cache-16nzh7m-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #ff8c69;
  border: none;
  color: #ffffff;
  background: #ffd7c1;
  color: #fffcfa;
}

.cache-16nzh7m-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-16nzh7m-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&danger 1`] = `
<DocumentFragment>
  .cache-frq40i-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #dd3252;
  color: #fbbac6;
}

.cache-frq40i-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-frq40i-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&danger disabled 1`] = `
<DocumentFragment>
  .cache-frq40i-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #dd3252;
  color: #fbbac6;
}

.cache-frq40i-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-frq40i-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&info 1`] = `
<DocumentFragment>
  .cache-1yl9td4-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f6ed8;
  color: #a8bff1;
}

.cache-1yl9td4-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1yl9td4-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&info disabled 1`] = `
<DocumentFragment>
  .cache-1yl9td4-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f6ed8;
  color: #a8bff1;
}

.cache-1yl9td4-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1yl9td4-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&neutral 1`] = `
<DocumentFragment>
  .cache-1f16qbq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4a4f62;
  color: #c4c9d6;
}

.cache-1f16qbq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1f16qbq-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&neutral disabled 1`] = `
<DocumentFragment>
  .cache-1f16qbq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4a4f62;
  color: #c4c9d6;
}

.cache-1f16qbq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1f16qbq-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&primary 1`] = `
<DocumentFragment>
  .cache-1pbol7v-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
}

.cache-1pbol7v-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1pbol7v-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&primary disabled 1`] = `
<DocumentFragment>
  .cache-1pbol7v-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
}

.cache-1pbol7v-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1pbol7v-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&success 1`] = `
<DocumentFragment>
  .cache-nke021-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #22c8a2;
  color: #9fefdd;
}

.cache-nke021-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-nke021-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&success disabled 1`] = `
<DocumentFragment>
  .cache-nke021-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #22c8a2;
  color: #9fefdd;
}

.cache-nke021-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-nke021-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&warning 1`] = `
<DocumentFragment>
  .cache-1lme6mo-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #ff8c69;
  color: #ffc8a9;
}

.cache-1lme6mo-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1lme6mo-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&warning disabled 1`] = `
<DocumentFragment>
  .cache-1lme6mo-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #ff8c69;
  color: #ffc8a9;
}

.cache-1lme6mo-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1lme6mo-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&danger 1`] = `
<DocumentFragment>
  .cache-qrk9qc-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #dd3252;
  color: #dd3252;
  color: #fbbac6;
  border: 1px solid #fbbac6;
}

.cache-qrk9qc-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-qrk9qc-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&danger disabled 1`] = `
<DocumentFragment>
  .cache-qrk9qc-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #dd3252;
  color: #dd3252;
  color: #fbbac6;
  border: 1px solid #fbbac6;
}

.cache-qrk9qc-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-qrk9qc-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&info 1`] = `
<DocumentFragment>
  .cache-1tpspwi-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #3f6ed8;
  color: #3f6ed8;
  color: #a8bff1;
  border: 1px solid #a8bff1;
}

.cache-1tpspwi-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1tpspwi-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&info disabled 1`] = `
<DocumentFragment>
  .cache-1tpspwi-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #3f6ed8;
  color: #3f6ed8;
  color: #a8bff1;
  border: 1px solid #a8bff1;
}

.cache-1tpspwi-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1tpspwi-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&neutral 1`] = `
<DocumentFragment>
  .cache-u7c3j8-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-u7c3j8-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-u7c3j8-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&neutral disabled 1`] = `
<DocumentFragment>
  .cache-u7c3j8-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-u7c3j8-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-u7c3j8-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&primary 1`] = `
<DocumentFragment>
  .cache-liy8aj-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #4f0599;
  color: #4f0599;
  color: #bda5df;
  border: 1px solid #bda5df;
}

.cache-liy8aj-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-liy8aj-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&primary disabled 1`] = `
<DocumentFragment>
  .cache-liy8aj-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #4f0599;
  color: #4f0599;
  color: #bda5df;
  border: 1px solid #bda5df;
}

.cache-liy8aj-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-liy8aj-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&success 1`] = `
<DocumentFragment>
  .cache-zbantb-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #22c8a2;
  color: #22c8a2;
  color: #9fefdd;
  border: 1px solid #9fefdd;
}

.cache-zbantb-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-zbantb-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&success disabled 1`] = `
<DocumentFragment>
  .cache-zbantb-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #22c8a2;
  color: #22c8a2;
  color: #9fefdd;
  border: 1px solid #9fefdd;
}

.cache-zbantb-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-zbantb-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&warning 1`] = `
<DocumentFragment>
  .cache-19bni5a-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #ff8c69;
  color: #ff8c69;
  color: #ffc8a9;
  border: 1px solid #ffc8a9;
}

.cache-19bni5a-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-19bni5a-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&warning disabled 1`] = `
<DocumentFragment>
  .cache-19bni5a-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #ff8c69;
  color: #ff8c69;
  color: #ffc8a9;
  border: 1px solid #ffc8a9;
}

.cache-19bni5a-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-19bni5a-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;
